[package]
name = "vibonik"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
failure = "0.1.6"
actix-files = "0.2.1"
actix-rt = "1.0.0"
dotenv = "0.15.0"
serde = "1.0.104"
actix-cors = "0.2.0"
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
reqwest = { version = "0.10.2", features = ["json"] }
env_logger = "0.7.1"
log = "0.4.8"
url = "2.1.1"
serde_json = "1.0.48"
diesel_migrations = "1.4.0"
chrono = { version = "0.4.10", features = ["serde"] }
actix-http = "1.0.1"
uuid = { version = "=0.7", features = ["v4", "serde"] }
actix-identity = "0.2.1"
futures = "0.3.4"
